@@ -1,5 +1,6 @@
 v0.7.5
 Fixed : premature end of frame when zero-sized raw block, reported by Eric Biggers
+Update : specification, to v0.1.2 : max huffman depth at 11 bits
 
 v0.7.4
 Added : homebrew for Mac
